--- a/tex/biological_inspiration.tex
+++ b/tex/biological_inspiration.tex
@@ -136,7 +136,7 @@ Please note that the line on the left is translated and stretched. However, the 
 Projection fibres thus provide generalisation, i.e. different, transformed versions of an object are recognised and mapped to a reference frame. This explains the ability of humans to see a new object once and immediately recognise it in a transformed version.
 
 \section{Vision}\seclbl{biologial_inspiration_vision}
-The aforementioned neuroscientific findings serve as foundation to build a novel image-processing framework\sidenote{Much of this vision is inspired by self-organising projection fibres (c.f. \secref{projection_fibres}) and inputs by leading experts from the field that supervise this thesis.}.
+The aforementioned neuroscientific findings serve as the foundation to build a novel image-processing framework\sidenote{Much of this vision is inspired by self-organising projection fibres (c.f. \secref{projection_fibres}) and inputs by leading experts from the field that supervise this thesis.}.
 The core behind this vision is based on two stages and projection fibres connecting them.
 The first stage builds net fragments reassembling a visual scene captured with a sensory system (the eyes). The lateral reach within this stage is limited since many pattern combinations can be experienced in the real world. However, scenes are dominated by locally similar-looking patterns that can be captured with net fragments.
 The second stage contains not entire visual scenes but reference frames representing specific objects. These objects are centred and transformation-invariant and can thus afford longer-reaching lateral connections.
@@ -146,7 +146,7 @@ If, for example, for each object rotated by 30°, a different reference frame ex
 Projection fibres connect these two stages, mapping objects within a visual scene to object prototypes.
 This mapping serves as a scene interpretation layer by describing which objects are located where in the observed scene.
 In the next \chref{probabilistic_framework}, a framework is proposed that implements these two stages with projection fibres.
-It is considered as a computational implementation of the foundation of the biological visual system.
+It is considered a computational implementation of the foundation of the biological visual system.
 However, in the long term, this framework can be further expanded and is not limited to these two stages, thereby leading to a highly efficient scene processing system.
 These extensions are discussed in the following.
 
