--- a/tex/biological_inspiration.tex
+++ b/tex/biological_inspiration.tex
@@ -173,7 +173,7 @@ Such a system could learn interpretations of visual scenes and might even have t
 I speculate that having a system that can build consistency of completely unseen scenes without teaching signals might be a step towards emergence.
 
 
-\subsection{Preventing Early Commitment}
+\subsection{Preventing Early Commitment}\seclbl{biologial_inspiration_early_commitment}
 As described in the previous section, deep learning models are prone to early commitment \sidecite{marr_vision_2010}.
 The brain's solution to prevent early commitment are net fragments.
 A single layer with lateral connections that forms net fragments can represent local and global features at the same time\sidenote{This way of thinking about features can be hard to comprehend, especially for computer scientists familiar with deep learning.}.
